--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include CHANGES
 include setup.py
 include pcaspy/pv.*
 include pcaspy/*.i
+include pcaspy/tools.py
 include example/*.py example/simscope.adl
 prune   example/pcaspy
 include test/*.py
