--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include MANIFEST.in
 include CHANGES
 include setup.py
 include pcaspy/pv.*
+include pcaspy/channel.*
 include pcaspy/*.i
 include pcaspy/tools.py
 include example/*.py example/simscope.adl
