add access security file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,7 +7,7 @@ include pcaspy/pv.*
 include pcaspy/channel.*
 include pcaspy/*.i
 include pcaspy/tools.py
-include example/*.py example/simscope.adl
+include example/*.py example/simscope.adl example/test.as
 prune   example/pcaspy
 include test/*.py
 prune   test/pcaspy
