--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [build_sphinx]
 fresh-env  = 1
-source-dir = doc/source
-build-dir  = doc/build
+source-dir = docs/source
+build-dir  = docs/build
 builder    = html
 all_files  = 1
 
 [upload_sphinx]
-upload-dir = doc/build/html
+upload-dir = docs/build/html
