exclude SWIG generated module

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,9 +6,10 @@ include setup.py
 include pcaspy/pv.*
 include pcaspy/channel.*
 include pcaspy/*.i
-include pcaspy/tools.py
-include pcaspy/alarm.py
-include example/*.py example/simscope.adl example/test.as
-prune   example/pcaspy
+include pcaspy/*.py
+exclude pcaspy/cas.py
+include example/*.py 
+include example/simscope.adl
+include example/simscope.opi
+include example/test.as
 include test/*.py
-prune   test/pcaspy
